# adot

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
package/aur/: .SRCINFO  PKGBUILD
package/brew/: adot.rb
src/: cli.rs  config.rs  installer.rs  lib.rs  main.rs  parser.rs  template.rs
tests/: config_parse.rs  config_validate.rs  install_copy.rs  install_link.rs  install_link_children.rs  install_template.rs  template.rs  zz_cleanup.rs
tests/fixtures/: config_copy.yaml  config_install_copy.yaml  config_install_link.yaml  config_install_link_children.yaml  config_install_link_missing_src.yaml  config_install_template.yaml  config_invalid_dst_in_dotpath.yaml  config_invalid_empty_dst.yaml  config_invalid_empty_src.yaml  config_invalid_src_eq_dst.yaml  config_invalid_unknown_dotfile_ref.yaml  config_invalid_unknown_include.yaml  config_link_children.yaml  config_link_default.yaml  config_template.yaml
tests/fixtures/dotfiles/: template_file
tests/fixtures/dotfiles/template_dir/: conditional.conf  config.ini
tests/fixtures/dotfiles/template_dir/subdir/: nested.conf
