[package]
name = "adot"
version = "0.1.13"
edition = "2024"
description = "A minimal dotfile manager"
license = "MIT"
repository = "https://github.com/Dimfred/adot"
readme = "README.md"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dependencies]
clap = { git = "https://github.com/Dimfred/clap.git", version = "4.6.0", features = ["derive"] }
yaml-rust2 = { git = "https://github.com/Dimfred/yaml-rust2.git", version = "0.11.0" }
